# DUPer

./: .gitignore  CHANGELOG.md  DUPer.py  Dockerfile  README.md  docker-compose.yml  pyproject.toml
duper/: __init__.py  __main__.py  cli.py  tui.py
duper/api/: __init__.py  auth.py  models.py  server.py
duper/api/routes/: __init__.py  acquisition.py  config.py  devices.py  duplicates.py  files.py  games.py  libraries.py  live.py  media.py  queue.py  retroachievements.py  scan.py  screenscraper.py  system.py
duper/core/: __init__.py  collections.py  config.py  database.py  deduper.py  devices.py  gamelist.py  library.py  media.py  retroachievements.py  scanner.py  screenscraper.py
duper/remote/: __init__.py  agent.py  deploy.py  ssh.py
duper/utils/: helpers.py
duper/web/static/: app.js  index.html  style.css
scripts/: acquisition-watchdog.sh  acquisition-worker.sh  auto-sync.sh  build-game-index.sh  build-rom-index.sh  build.py  deck-export-configs.sh  deck-import-configs.sh  deploy.py  duper.service  live-capture.sh  media-worker.sh  sync-media-cache.sh  transfer-worker.sh  xbox-iso-convert.sh
tui/: duper-tui.py
