[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duper"
version = "2.3.5"
description = "ROM collection manager with duplicate detection, smart transfers, achievement tracking, and web/TUI dashboards"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Eurrl" }
]
keywords = ["duplicate", "files", "deduplication", "retroarch", "roms", "retrogaming", "retroachievements", "screenscraper", "es-de"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "typer>=0.9.0",
    "httpx>=0.26.0",
    "paramiko>=3.4.0",
    "pydantic>=2.5.0",
    "toml>=0.10.2",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
duper = "duper.cli:app"
duper-tui = "duper.tui:main"

[project.urls]
Homepage = "https://github.com/eurrl/DUPer"
Repository = "https://github.com/eurrl/DUPer"

[tool.hatch.build.targets.wheel]
packages = ["duper"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
